@@ -14,86 +14,111 @@
  * limitations under the License.
  */
 
-import org.gradle.api.internal.project.ProjectInternal
-import org.gradle.jvm.toolchain.internal.JavaInstallationProbe
-import org.gradle.plugins.ide.idea.model.IdeaModel
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.gradle.kotlin.dsl.plugins.dsl.KotlinDslPlugin
+
 import java.io.File
 import java.util.Properties
-import kotlin.coroutines.experimental.EmptyCoroutineContext.plus
-
-buildscript {
-    project.apply {
-        from("$rootDir/../gradle/shared-with-buildSrc/mirrors.gradle.kts")
-    }
-}
 
 plugins {
-    `kotlin-dsl` version "0.17.2"
-    id("org.gradle.kotlin.ktlint-convention") version "0.1.8" apply false
+    `java`
+    `kotlin-dsl` apply false
+    id("org.gradle.kotlin-dsl.ktlint-convention") version "0.3.0" apply false
 }
 
 subprojects {
+    if (name != "buildPlatform") {
+        apply(plugin = "java-library")
 
-    apply { plugin("java-library") }
 
-    if (file("src/main/groovy").isDirectory || file("src/test/groovy").isDirectory) {
+        if (file("src/main/groovy").isDirectory || file("src/test/groovy").isDirectory) {
+            applyGroovyProjectConventions()
+        }
 
-        applyGroovyProjectConventions()
-    }
+        if (file("src/main/kotlin").isDirectory || file("src/test/kotlin").isDirectory) {
+            applyKotlinProjectConventions()
+        }
 
-    if (file("src/main/kotlin").isDirectory || file("src/test/kotlin").isDirectory) {
+        java {
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+        }
 
-        applyKotlinProjectConventions()
-    }
+        dependencies {
+            compile(gradleApi())
+        }
 
-    apply {
-        plugin("idea")
-        plugin("eclipse")
-    }
+        afterEvaluate {
+            if (tasks.withType<ValidateTaskProperties>().isEmpty()) {
+                val validateTaskProperties by tasks.registering(ValidateTaskProperties::class) {
+                    outputFile.set(project.reporting.baseDirectory.file("task-properties/report.txt"))
 
-    configure<IdeaModel> {
-        module.name = "buildSrc-${this@subprojects.name}"
-    }
-
-    dependencies {
-        compile(gradleApi())
-    }
-
-    afterEvaluate {
-        if (tasks.withType<ValidateTaskProperties>().isEmpty()) {
-            tasks.create<ValidateTaskProperties>("validateTaskProperties") {
-                outputFile.set(project.the<ReportingExtension>().baseDirectory.file("task-properties/report.txt"))
-
-                val mainSourceSet = project.java.sourceSets[SourceSet.MAIN_SOURCE_SET_NAME]
-                classes = mainSourceSet.output.classesDirs
-                classpath = mainSourceSet.compileClasspath
-                dependsOn(mainSourceSet.output)
-
-                project.tasks["check"].dependsOn(this)
+                    val mainSourceSet = project.sourceSets.main.get()
+                    classes.setFrom(mainSourceSet.output.classesDirs)
+                    dependsOn(mainSourceSet.output)
+                    classpath.setFrom(mainSourceSet.runtimeClasspath)
+                }
+                tasks.check { dependsOn(validateTaskProperties) }
             }
         }
+
+        tasks.withType<ValidateTaskProperties> {
+            failOnWarning = true
+            enableStricterValidation = true
+        }
+
+        apply(from = "../../../gradle/shared-with-buildSrc/code-quality-configuration.gradle.kts")
     }
+    apply(plugin = "eclipse")
 }
 
 allprojects {
     repositories {
-        maven(url = "https://repo.gradle.org/gradle/libs-releases")
-        maven(url = "https://repo.gradle.org/gradle/libs-snapshots")
+        maven {
+            name = "Gradle libs"
+            url = uri("https://repo.gradle.org/gradle/libs")
+        }
         gradlePluginPortal()
+        maven {
+            name = "Gradle snapshot libs"
+            url = uri("https://repo.gradle.org/gradle/libs-snapshots")
+        }
+        maven {
+            name = "kotlin-eap"
+            url = uri("https://dl.bintray.com/kotlin/kotlin-eap")
+        }
     }
 }
 
 dependencies {
     subprojects.forEach {
-        "runtime"(project(it.path))
+        runtime(project(it.path))
     }
 }
 
+
 // TODO Avoid duplication of what defines a CI Server with BuildEnvironment
 val isCiServer: Boolean by extra { "CI" in System.getenv() }
-if (!isCiServer || System.getProperty("enableCodeQuality")?.toLowerCase() == "true") {
-    apply { from("../gradle/shared-with-buildSrc/code-quality-configuration.gradle.kts") }
+
+
+/**
+ * Controls whether verification tasks are skipped.
+ *
+ * Set the `buildSrcCheck` Gradle property to `true` to run the verification tasks.
+ * Set it to `false` to skip the verification tasks.
+ *
+ * When that property is unset, defaults to `false` on CI, to `true` otherwise.
+ */
+val isSkipBuildSrcVerification: Boolean =
+    (findProperty("buildSrcCheck") as String?)
+        ?.let { it == "false" }
+        ?: !isCiServer
+
+if (isSkipBuildSrcVerification) {
+    allprojects {
+        tasks.matching { it.group == LifecycleBasePlugin.VERIFICATION_GROUP }.configureEach {
+            enabled = false
+        }
+    }
 }
 
 if (isCiServer) {
@@ -131,38 +156,34 @@ fun readProperties(propertiesFile: File) = Properties().apply {
     }
 }
 
-tasks {
-    val checkSameDaemonArgs by creating {
-        doLast {
-            val buildSrcProperties = readProperties(File(project.rootDir, "gradle.properties"))
-            val rootProperties = readProperties(File(project.rootDir, "../gradle.properties"))
-            val jvmArgs = listOf(buildSrcProperties, rootProperties).map { it.getProperty("org.gradle.jvmargs") }.toSet()
-            if (jvmArgs.size > 1) {
-                throw GradleException("gradle.properties and buildSrc/gradle.properties have different org.gradle.jvmargs " +
-                    "which may cause two daemons to be spawned on CI and in IDEA. " +
-                    "Use the same org.gradle.jvmargs for both builds.")
-            }
+val checkSameDaemonArgs by tasks.registering {
+    doLast {
+        val buildSrcProperties = readProperties(File(project.rootDir, "gradle.properties"))
+        val rootProperties = readProperties(File(project.rootDir, "../gradle.properties"))
+        val jvmArgs = listOf(buildSrcProperties, rootProperties).map { it.getProperty("org.gradle.jvmargs") }.toSet()
+        if (jvmArgs.size > 1) {
+            throw GradleException("gradle.properties and buildSrc/gradle.properties have different org.gradle.jvmargs " +
+                "which may cause two daemons to be spawned on CI and in IDEA. " +
+                "Use the same org.gradle.jvmargs for both builds.")
         }
     }
-
-    val build by getting
-    build.dependsOn(checkSameDaemonArgs)
 }
 
+tasks.build { dependsOn(checkSameDaemonArgs) }
+
 fun Project.applyGroovyProjectConventions() {
-    apply { plugin("groovy") }
+    apply(plugin = "groovy")
 
     dependencies {
         compile(localGroovy())
-        testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
-        testCompile("cglib:cglib:3.2.6")
-        testCompile("org.objenesis:objenesis:2.4")
-        constraints {
-            compile("org.codehaus.groovy:groovy-all:2.4.12")
+        testCompile("org.spockframework:spock-core:1.2-groovy-2.5") {
+            exclude(group = "org.codehaus.groovy")
         }
+        testCompile("net.bytebuddy:byte-buddy:1.8.21")
+        testCompile("org.objenesis:objenesis:2.6")
     }
 
-    tasks.withType<GroovyCompile> {
+    tasks.withType<GroovyCompile>().configureEach {
         groovyOptions.apply {
             encoding = "utf-8"
         }
@@ -175,13 +196,21 @@ fun Project.applyGroovyProjectConventions() {
         inputs.property("javaInstallation", "$vendor ${JavaVersion.current()}")
     }
 
-    val compileGroovy: GroovyCompile by tasks
+    tasks.withType<Test>().configureEach {
+        if (JavaVersion.current().isJava9Compatible) {
+            //allow ProjectBuilder to inject legacy types into the system classloader
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            jvmArgs("--illegal-access=deny")
+        }
+    }
+
+    val compileGroovy by tasks.existing(GroovyCompile::class)
 
     configurations {
-        "apiElements" {
+        apiElements {
             outgoing.variants["classes"].artifact(
                 mapOf(
-                    "file" to compileGroovy.destinationDir,
+                    "file" to compileGroovy.get().destinationDir,
                     "type" to ArtifactTypeDefinition.JVM_CLASS_DIRECTORY,
                     "builtBy" to compileGroovy
                 ))
@@ -190,14 +219,19 @@ fun Project.applyGroovyProjectConventions() {
 }
 
 fun Project.applyKotlinProjectConventions() {
-    apply {
-        plugin("kotlin")
-        plugin("org.gradle.kotlin.ktlint-convention")
+    apply(plugin = "org.gradle.kotlin.kotlin-dsl")
+    apply(plugin = "org.gradle.kotlin-dsl.ktlint-convention")
+
+    plugins.withType<KotlinDslPlugin> {
+        configure<KotlinDslPluginOptions> {
+            experimentalWarning.set(false)
+        }
     }
 
-    tasks.withType<KotlinCompile> {
-        kotlinOptions {
-            freeCompilerArgs += listOf("-Xjsr305=strict")
+    configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
+        // TODO:kotlin-dsl remove precompiled script plugins accessors exclusion from ktlint checks
+        filter {
+            exclude("gradle/kotlin/dsl/accessors/_*/**")
         }
     }
 }
